feat: add dummy password hash configuration and improve logging checks in authentication and product management